# linux-blender-mcp

./: CLAUDE.md  README.md  mock_server.py  pyproject.toml
blender_addon/: __init__.py  addon.py
src/blender_mcp/: __init__.py  client.py  server.py  simple_client.py
src/blender_mcp/tools/: __init__.py  animation_tools.py  material_tools.py  object_tools.py  scene_tools.py
