[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp"
version = "0.1.0"
description = "Model Context Protocol server and client for Blender integration"
authors = [
    {name = "Custom Blender MCP", email = "dev@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[project.scripts]
blender-mcp-server = "blender_mcp.server:main"
blender-mcp-client = "blender_mcp.client:main_sync"
blender-direct-client = "blender_mcp.simple_client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/blender_mcp"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true